Horizontal scrollbar "height" fixed

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -54,8 +54,9 @@ body {
 /* Style the scrollbars */
 
 ::-webkit-scrollbar {
-  /* Set the scrollbar width to 10px. */
+  /* Set the scrollbar width and height to 10px. */
   width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-track {
